2010-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't use disk subsystem in freebsd_boot.

	* grub-core/loader/i386/bsd.c (freebsd_bootdev): New variable.
	(freebsd_biosdev): Likewise.
	(grub_freebsd_boot): Use freebsd_bootdev and freebsd_biosdev.
	(grub_cmd_freebsd): Set freebsd_bootdev and freebsd_biosdev.

2010-12-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Handling of files of unknown size is currently limited. They can't be
	used e.g. for initrd or modules. Moreover gzip handling of not
	easily seekable files is buggy. Disable unknown file size for now. May
	be inefficient but works.

	* grub-core/io/gzio.c (test_header): Always retrieve the file size.
	* grub-core/io/xzio.c (grub_xzio_open): Likewise.

2010-12-25  Mirko Parthey <mirko.parthey@informatik.tu-chemnitz.de>

	* grub-core/boot/i386/pc/boot.S: Fix %es:%bx pointing to nowhere on
	floppy probe.

2010-12-25  Jeroen Dekkers <jeroen@dekkers.ch>

	* grub-core/disk/raid.c (insert_array): Don't add spurious members.

2010-12-25  Shea Levy <shlevy>

	* grub-core/genmod.sh.in: Use @OBJCOPY@ rather than objcopy.

2010-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/30_os-prober.in: Don't emit drivemap directive for
	Windows Server 2008.
	Reported by: Devin Giddings.

2010-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpihalt.c (grub_acpi_halt): Sleep for 1.5 before
	writing an error message because of async power management.
	* grub-core/kern/mips/yeeloong/init.c (grub_halt): Likewise.
	(grub_reboot): Likewise.

2010-12-23  Jordan Uggla  <jordan.uggla@gmail.com>

	* tests/util/grub-shell.in: Suppress "ACPI shutdown failed" error to
	keep unit tests from failing when they shouldn't.

2010-12-21  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/offsets.h (GRUB_KERNEL_I386_PC_RAW_SIZE): The
	previous patch increased the size of the RS code by 20 bytes (at
	least with gcc-4.4), so increase this by 20 bytes to match.